# dopest-clip

./: .coverage  .gitignore  PLAN.md  README.md  providers.example.toml  pyproject.toml
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/electron/: main.ts  preload.ts  tsconfig.json
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src/api/: sidecar.test.ts  sidecar.ts  types.ts
desktop/src/components/: Inspector.tsx  Preview.tsx  Projects.tsx  Providers.tsx  Timeline.tsx  Transcript.tsx
desktop/src/edl/: edl.test.ts  edl.ts  types.ts
desktop/src/state/: useEditor.ts
dopest_clip/: __init__.py  __main__.py  api.py  captions.py  config.py  edl.py  jobs.py  learn.py  media.py  ops.py  project.py  reframe.py  server.py  sidecar.py  verify.py
dopest_clip/audio/: __init__.py  asr.py  dsp.py  qa.py  sfx.py  tts.py
dopest_clip/image/: __init__.py  gen.py  ops.py
dopest_clip/obs/: __init__.py  blur.py  camera_mix.py  client.py  compositor.py  graphics.py  timeline.py  tracking.py  ws.py
dopest_clip/providers/: __init__.py  elevenlabs.py  fish.py  flowdot.py  gemini.py  openai.py  openrouter.py  registry.py
dopest_clip/stt/: __init__.py  openai_backend.py  whisperx_backend.py
tests/: conftest.py  mcp_smoke.py  test_api.py  test_audio.py  test_captions.py  test_edl.py  test_image.py  test_jobs.py  test_main.py  test_obs.py  test_ops.py  test_providers.py  test_server.py  test_short.py  test_sidecar.py  test_stt.py  test_tracking.py
